# wordsonsand

./: .bazelrc  .gitignore  .gitmodules  BUILD  LICENSE  MODULE.bazel  README.md  WORKSPACE  deps.bzl  devbox.json  go.mod  go.sum  requirements.in  requirements_lock.txt
.github/workflows/: cron.yaml  despatch.yaml  hugo.yaml  main.yml  projector.yaml
blog/: .gitignore  .htmltest.yml  Gemfile  _config.yml  about.md  cat2tag.py  go.mod  go.sum  hugo.toml  robots.txt
blog/_includes/: footer_content.html  google_analytics.html  head_custom.html
blog/_layouts/: post.html
blog/_posts/: 2008-12-12-a-ubuquitous-avatar.html  2008-12-12-a-ubuquitous-avatar.md  2008-12-12-design.html  2008-12-12-design.md  2008-12-12-evil-linux.html  2008-12-12-evil-linux.md  2008-12-13-tinkerbell.html  2008-12-13-tinkerbell.md  2008-12-14-foxy-web.html  2008-12-14-foxy-web.md  2008-12-15-breaking-software-down.html  2008-12-15-breaking-software-down.md  2008-12-23-hibernate-domain-model-testing.html  2008-12-23-hibernate-domain-model-testing.md  2008-12-28-eclipse-tptp-on-ubuntu-64bit.html  2008-12-28-eclipse-tptp-on-ubuntu-64bit.md  2008-12-28-maven2-ejb3-and-jboss.html  2008-12-28-maven2-ejb3-and-jboss.md  2008-12-30-x11-remote-applications-responsiveness.html  2008-12-30-x11-remote-applications-responsiveness.md  2009-01-01-proprietary-fsf.html  2009-01-01-proprietary-fsf.md  2009-01-12-building-a-website.html  2009-01-12-building-a-website.md  2009-01-13-on-top-of-tasktop.html  2009-01-13-on-top-of-tasktop.md  2009-01-31-bad-google.html  2009-01-31-bad-google.md  2009-01-31-controversy.html  2009-01-31-controversy.md  2009-02-03-customisation.html  2009-02-03-customisation.md  2009-02-10-accepting-google.html  2009-02-10-accepting-google.md  2009-03-04-making-twitter-faster.html  2009-03-04-making-twitter-faster.md  2009-03-09-making-twitter-better.html  2009-03-09-making-twitter-better.md  2009-03-10-database-systems-compared.html  2009-03-10-database-systems-compared.md  (+191 more)
blog/_posts/devex/: 2023-11-01-including-a-built-artifact-in-another-target-bazel-golang.md  2023-11-07-bazel-pulumi-automation-api-deploying-an-inline-stack-along-with-pulumi-yaml.md  2023-11-13-separating-out-integration-tests-for-golang-in-bazel.md  2023-11-14-unable-to-write-to-home-pulumi-credentials-json-during-bazel-test.md  2025-06-09-use-protoc-bin-in-bazel.md
blog/_posts/devops/: 2025-06-06-bazel-go-docker-gcloud.md
blog/_posts/health/: 2026-06-14-smoothie-nafld.md
blog/_posts/microblogging/: 2023-11-29-a-new-way.md  2024-12-12-agile-the-hope-killer.md  2025-01-21-no-best-practices.md  2025-01-22-will-ai-end-america.md  2025-02-12-starting-again.md  2025-05-01-going-fast-or-far.md  2025-05-16-journey-or-destination.md
blog/_posts/muster/: 2023-11-21-muster.md  2023-12-14-slack-channels-for-clickup.md
blog/_posts/poetry/: 2011-04-10-flying.md  2011-04-11-while-i-was-sleeping.md  2011-04-25-the-circle-of-life.md  2011-04-26-dreams.md  2011-04-27-good-intentions.md  2012-04-20-hold-on-tight.md  2015-06-19-the-joy-of-misery.md  2015-06-20-unending-love.md  2024-01-03-a-half-written-poem.md  2024-08-02-not-afraid.md
blog/_posts/triangle/: 2025-04-26-a-lonely-triangle.md  2025-05-08-basic-gameplay.md  2025-05-10-asteroid-field.md  2025-05-13-materials.md  2025-05-20-crafting-machines.md  2025-05-25-recipes.md  2025-06-08-config.md  2025-06-08-inventory.md
blog/_posts/yertoob/: 2018-06-25-yertoob.md  2018-06-26-what-i-learnt-developing-a-small-javafx-app-wip.md
blog/archetypes/: youtube.md
blog/content/: about.md
blog/content/alchemy/: _index.md
blog/content/endeavours/: _index.md  death-of-an-immortal.md  drone-ah-adventures.md  megabus-ticketing.md  shri-codes.md  triangle.md  wordsonsand.md  yertoob.md
blog/content/excursions/: _index.md  despatches.md  inscribe.md  projector.md
blog/content/posts/: 2008-12-12-a-ubuquitous-avatar.md  2008-12-12-design.md  2008-12-12-evil-linux.md  2008-12-13-tinkerbell.md  2008-12-14-foxy-web.md  2008-12-15-breaking-software-down.md  2008-12-23-hibernate-domain-model-testing.md  2008-12-28-eclipse-tptp-on-ubuntu-64bit.md  2008-12-28-maven2-ejb3-and-jboss.md  2008-12-30-x11-remote-applications-responsiveness.md  2009-01-01-proprietary-fsf.md  2009-01-12-building-a-website.md  2009-01-13-on-top-of-tasktop.md  2009-01-31-bad-google.md  2009-01-31-controversy.md  2009-02-03-customisation.md  2009-02-10-accepting-google.md  2009-03-04-making-twitter-faster.md  2009-03-09-making-twitter-better.md  2009-03-10-database-systems-compared.md  2009-03-17-mmmmmmm-hhhhhh-ddddd.md  2009-03-23-vista-guest-linux-host-virtualbox-host-networking-bridge.md  2009-12-15-perfect-linux.md  2009-12-15-twitter-is-better.md  2010-04-18-synergy-with-linux-server-mac-client.md  2010-04-19-android-multi-line-select-list.md  2010-04-21-linux-bulk-search-and-replace.md  2010-04-25-android-managing-global-configuratio.md  2010-04-26-android-parcel-data-to-pass-between-activities-using-parcelable-classes.md  2010-06-01-richcalendar-and-the-onchange-event.md  2011-02-22-hook_theme-doesnt-get-called.md  2011-04-10-bzzzzz-acacius.md  2011-04-10-escape-taoma.md  2011-04-25-java-object-size-in-memory.md  2011-04-27-life-valentin.md  2011-04-27-love-taoma.md  2011-04-27-sleep-acacius.md  2011-04-27-vengeance-agent-maccabee.md  2011-05-10-the-urn-acacius.md  2011-05-11-lana-acacius.md  (+59 more)
blog/content/youtube/: _index.md
blog/data/: tagpanels.yaml
blog/layouts/: index.html  term.html
blog/layouts/_default/: list.html  rss.xml  single.jekyll.md  single.plain.txt
blog/layouts/alchemy/: list.html
blog/layouts/endeavours/: list.html
blog/static/: CNAME  LICENSE
code/zig/: BUILD.bazel  build.zig.zon
code/zig/src/: main.zig  (+2 more)
games/pong/: build.zig  build.zig.zon
hugo/: hugo.toml  hugo.yaml
hugo/static/: robots.txt
lib/inscribe/: BUILD.bazel  README.md  formats.go  inscribe.go  inscribe_test.go
lib/inscribe/testdata/: md-with-frontmatter.md
tools/despatcher/: BUILD.bazel  README.md  despatch.py  pyproject.toml
tools/projector/: BUILD.bazel  README.md  main.go  post.go  youtube.go
(+473 files in other folders)
