module(
    name = "wordsonsand",
    version = "1.0",
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")

# If the Gazelle plugin is needed:
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.7.1", dev_dependency = True)

bazel_dep(name = "rules_go", version = "0.55.0")
bazel_dep(name = "gazelle", version = "0.43.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_aws_aws_sdk_go_v2",
    "com_github_aws_aws_sdk_go_v2_config",
    "com_github_aws_aws_sdk_go_v2_credentials",
    "com_github_aws_aws_sdk_go_v2_service_ssm",
    "com_github_aws_aws_sdk_go_v2_service_sts",
    "com_github_pulumi_pulumi_aws_sdk_v6",
    "com_github_pulumi_pulumi_sdk_v3",
    "com_github_stretchr_testify",
)

bazel_dep(name = "bazel-diff", version = "9.0.3")
bazel_dep(name = "rules_zig", version = "0.8.0")
bazel_dep(name = "protobuf", version = "31.1")

zig = use_extension(
    "@rules_zig//zig:extensions.bzl",
    "zig",
    dev_dependency = True,
)
zig.toolchain(zig_version = "0.14.0")
use_repo(zig, "zig_toolchains")


zig_toml_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Using my fork while waiting for serialization fix to be applied
# https://github.com/sam701/zig-toml/pull/33 
zig_toml_archive(
    name = "zig_toml",
    urls = ["https://github.com/sam701/zig-toml/archive/refs/heads/main.zip"],
    strip_prefix = "zig-toml-main",
    build_file_content = """
load("@rules_zig//zig:defs.bzl", "zig_module")
zig_module(
    name = "toml",
    main = "src/root.zig",
    srcs = glob(["src/**/*.zig"]),
    visibility = ["//visibility:public"],
)
""",
)


bazel_dep(name = "rules_python", version = "1.2.0")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.11",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pypi")
