[project]
name = "despatcher"
version = "0.1.0"
description = ""
authors = [
    {name = "Shri",email = "me@drone-ah.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-frontmatter (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
