load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "projector_lib",
    srcs = [
        "main.go",
        "post.go",
        "youtube.go",
    ],
    importpath = "github.com/drone-ah/wordsonsand/tools/projector",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/inscribe",
        "@com_github_urfave_cli_v3//:cli",
        "@org_golang_google_api//option",
        "@org_golang_google_api//youtube/v3:youtube",
        "@org_golang_x_oauth2//:oauth2",
        "@org_golang_x_oauth2//google",
    ],
)

go_binary(
    name = "projector",
    embed = [":projector_lib"],
    visibility = ["//visibility:public"],
)
